# mutoracle-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: FITS_DATASET.md  README.md
data/fits/: build_fits.py  manifest.json
data/fits/fits_v1.0.0/: BASELINE_LOCK.json  quality_gate_report.json
data/manifests/: datasets.json
docs/: API_REFERENCE.md  CONFIGURATION.md  EXPERIMENTS.md  EXPERIMENT_PROTOCOL.md  FAULT_LOCALIZER.md  FITS_DATASET.md  METARAG_REIMPLEMENTATION.md  MUTATION_TAXONOMY.md  ORACLE_LAYER.md  PHASE_PLAN.md  PHASE_STATUS.md  README.md  REFERENCE_NOTES.md  REPRODUCING.md  final-plan.md
experiments/: __init__.py  analyze_results.py  run_ablation.py  run_baselines.py  run_calibrated_localization.py  run_latency.py  run_mutoracle.py  run_weight_search.py  stats.py
experiments/configs/: calibrated.yaml  dev.yaml  e2_localization.yaml  e4_separability.yaml  e5_latency.yaml  e6_weighted.yaml  phase8_real.yaml
experiments/results/e1_detection/: e1_detection_full_config_snapshot.yaml  e1_detection_full_duckdb.sql  e1_detection_full_manifest.json  e1_detection_full_summary.csv  e1_detection_smoke_duckdb.sql  e1_detection_smoke_manifest.json  e1_detection_smoke_summary.csv
experiments/results/e2_localization/: e2_localization_full_config_snapshot.yaml  e2_localization_full_duckdb.sql  e2_localization_full_manifest.json  e2_localization_full_summary.csv  e2_localization_smoke_duckdb.sql  e2_localization_smoke_manifest.json  e2_localization_smoke_summary.csv
experiments/results/e2_localization_calibrated/: e2_localization_calibrated_full_manifest.json  e2_localization_calibrated_full_models.json  e2_localization_calibrated_full_summary.csv
experiments/results/e3_ablation/: e3_ablation_full_config_snapshot.yaml  e3_ablation_full_duckdb.sql  e3_ablation_full_manifest.json  e3_ablation_full_summary.csv  e3_ablation_smoke_config_snapshot.yaml  e3_ablation_smoke_duckdb.sql  e3_ablation_smoke_manifest.json  e3_ablation_smoke_summary.csv
experiments/results/e4_separability/: e4_separability_full_config_snapshot.yaml  e4_separability_full_duckdb.sql  e4_separability_full_manifest.json  e4_separability_full_summary.csv  e4_separability_smoke_config_snapshot.yaml  e4_separability_smoke_duckdb.sql  e4_separability_smoke_manifest.json  e4_separability_smoke_summary.csv
experiments/results/e5_latency/: e5_latency_full_config_snapshot.yaml  e5_latency_full_duckdb.sql  e5_latency_full_manifest.json  e5_latency_full_summary.csv  e5_latency_smoke_duckdb.sql  e5_latency_smoke_manifest.json  e5_latency_smoke_summary.csv
experiments/results/e6_weighted/: e6_weighted_full_config_snapshot.yaml  e6_weighted_full_duckdb.sql  e6_weighted_full_manifest.json  e6_weighted_full_summary.csv  e6_weighted_smoke_duckdb.sql  e6_weighted_smoke_manifest.json  e6_weighted_smoke_summary.csv
experiments/results/e6_weighted_fast/: e6_weighted_fast_smoke_config_snapshot.yaml  e6_weighted_fast_smoke_duckdb.sql  e6_weighted_fast_smoke_manifest.json  e6_weighted_fast_smoke_summary.csv
src/mutoracle/: __init__.py  cache.py  cli.py  config.py  contracts.py  experiments.py  prompts.py  provider.py  rag.py  retrieval.py
tests/unit/: test_aggregation.py  test_analysis_assets.py  test_baselines.py  test_cache.py  test_calibration.py  test_cli.py  test_config.py  test_contracts.py  test_coverage_adapters.py  test_data_fits.py  test_data_loaders_and_retrieval_edges.py  test_experiments.py  test_faiss_index.py  test_localizer.py  test_localizer_calibration.py  test_mutations.py  test_oracles.py  test_phase_layout.py  test_prompts.py  test_provider.py  test_rag.py  test_retrieval.py
(+42 files in other folders)
