[project]
name = "mutoracle-rag"
version = "0.1.0"
description = "Mutation-driven, stage-aware fault localization for RAG pipelines."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "MutOracle-RAG Contributors" },
]
keywords = ["rag", "mutation-testing", "hallucination", "fault-localization"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "duckdb>=1.1",
  "openai>=2.33.0",
  "pydantic>=2.8",
  "pyyaml>=6.0.2",
  "rich>=13.7",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6.9",
  "types-pyyaml>=6.0.12",
]
oracles = [
  "sentence-transformers>=3.0",
  "torch>=2.3",
  "transformers>=4.44",
]

[project.urls]
Homepage = "https://github.com/example/mutoracle-rag"
Issues = "https://github.com/example/mutoracle-rag/issues"

[project.scripts]
mutoracle = "mutoracle.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mutoracle"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["mutoracle"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentence_transformers", "transformers"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=mutoracle --cov-report=term-missing --cov-fail-under=95 -m 'not provider'"
testpaths = ["tests"]
markers = [
  "provider: live provider tests that may call paid or remote model APIs",
]
